2005-03-26  Jeroen Frijters  <jeroen@frijters.net>

	* javax/imageio/spi/IIORegistry.java (IIORegistry):
	Don't assume that awt Toolkit is always ClasspathToolkit.

2005-03-26  Jeroen Frijters  <jeroen@frijters.net>

	* java/awt/image/PixelGrabber.java (setPixels(int,int,int,int,
	ColorModel,byte[],int,int): Fixed byte to int conversion.

2005-03-23  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/xml/dom/html2/DomHTMLParser.java
	Changed 'enum' references to become 'enumeration'.
	
2005-03-22  Archie Cobbs  <archie@dellroad.org>

	* configure.ac: Generate scripts/classpath.spec.
	* scripts/classpath.spec.in: New file.

2005-03-21  Audrius Meskauskas  <audriusa@bluewin.ch>
	
	* gnu/xml/dom/html2/DomHTMLParser.java: New file.
	* gnu/classpath/examples/html/Demo.java: New example.

2005-03-21  Sven de Marothy  <sven@physto.se>

	* gnu/classpath/SystemProperties.java,
	Add missing aliases for "UnicodeBigUnmarked" and
	UnicodeLittleUnmarked".
	
2005-03-21  Mark Wielaard  <mark@klomp.org>

	* doc/www.gnu.org/events/escape_fosdem05.wml: Add link to kaffe
	presentation.

2005-03-17  Archie Cobbs  <archie@dellroad.org>

	* vm/reference/java/lang/VMClassLoader.java: handle ZIP files
	on the boot loader class path in getResources()

2005-03-19  Audrius Meskauskas  <audriusa@bluewin.ch>

	* org/omg/CORBA/AnySeqHolder.java,
	org/omg/CORBA/AnySeqHelper.java,
	org/omg/CORBA/CompletionStatusHelper.java:
	New files.

2005-03-18  Mark Wielaard  <mark@klomp.org>

	* doc/www/downloads/downloads.wml: Add 0.14.
	* doc/www/announce/20050226.wml: New file.

2005-03-18  Sven de Marothy  <sven@physto.se>

	* java/util/zip/GZIPInputStream.java:
	(GZIPInputStream): Read header in constructor.
	
2005-03-18  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* gnu/javax/swing/text/html/parser/htmlAttributeSet.java:
	(getAttributeNames()): Replaced 'enum' with 'enumeration'.
	* gnu/javax/swing/text/html/parser/htmlValidator.java:
	(validateParameters(TagElement,htmlAttributeSet)):